--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,9 @@
             "48": "icons/48.png"
         }
     },
+    "host_permissions": [
+      "<all_urls>"
+    ],
     "permissions": [
         "storage",
         "tabs"
