--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "Go",
-    "version": "0.32",
+    "version": "0.33",
     "author": {
       "name": "Manu Cornet"
     },
@@ -24,7 +24,6 @@
       "<all_urls>"
     ],
     "permissions": [
-        "storage",
-        "tabs"
+        "storage"
     ]
 }
